# dubhe-baremetal

./: CMakeLists.txt  build.sh  build_a55.sh  build_a55_dubhe.sh  build_a55_qemu.sh  build_all.sh  build_cv32e40p.sh  build_m3.sh  build_ri5cy.sh  gdb.sh  gdb_a55.sh  gdb_a55_qemu.sh  gdb_config  gdb_m3.sh  gdb_m3_qemu.sh  gdb_m3_qemu_script  gdb_script  gdb_script_qemu  how_to_create_new_module.md  qemu_a55.sh  qemu_m3.sh  qemu_riscv32.sh  qemu_run.sh  readme.md
app/a55/bl33_bootloader/: build.sh
app/a55/bootrom_for_fpga_bit/: app.cmake  build.sh
app/a55/cli/: app.cmake  build.sh
app/a55/crypto/: app.cmake  build.sh
app/a55/ddr/: build.sh
app/a55/dw_apb_ssi/: app.cmake  build.sh
app/a55/dw_apb_timer/: app.cmake  build.sh  gdb.sh
app/a55/dw_mbox_a2b/: build.sh
app/a55/freertos_basic/: app.cmake  build.sh
app/a55/fwu_dram/: app.cmake  build.sh
app/a55/fwu_sram/: app.cmake  build.sh
app/a55/generic_timers/: app.cmake  build.sh  gdb.sh
app/a55/gpio/: build.sh
app/a55/hello/: app.cmake  build.sh  gdb.sh
app/a55/i2c/: app.cmake  build.sh
app/a55/i2c_wo/: app.cmake
app/a55/mipi_tx_csi/: app.cmake  build.sh
app/a55/nand/: app.cmake  build.sh
app/a55/openamp_device/: app.cmake  build.sh
app/a55/openamp_driver/: app.cmake  build.sh  gdb_init_qemu  gdb_qemu.sh  qemu_a55.sh
app/a55/pm_demo/: app.cmake
app/a55/pmon/: CMakeCache.txt  app.cmake  build.sh
app/a55/pmu/: app.cmake
app/a55/sysinfo/: build.sh
app/a55/wdt/: app.cmake  build.sh
app/cv32e40p/hello/: app.cmake  build.sh
app/hello_world/: CMakeLists.txt  app.cmake
app/hello_world/inc/: main_a55.c  main_ri5cy.c
app/hello_world/src/: main.c  main_m3.c  main_ri5cy.c
app/m3/bootrom_for_fpga_bit/: app.cmake  build.sh
app/m3/cli/: app.cmake  build.sh
app/m3/ddr_test/: build.sh
app/m3/dw_apb_timer/: app.cmake  build.sh
build_helper/: aarch32gcc.cmake  aarch64gcc.cmake  armgcc.cmake  corev_gcc.cmake  cv32e40p_gcc.cmake  riscv_gcc.cmake
common/: CMakeLists.txt
common/inc/: _ca55_chip_define.h  _cm3_chip_define.h  ca55_chip_define.h  cdefs.h  chip_mem_layout.h  cm3_chip_define.h  lp_regs.h  peri0_regs.h  peri1_regs.h  regs_type.h  seehi_print.h  sys_regs.h  utils_def.h
devices/a55/: CMakeLists.txt  memory_layout.h
devices/a55/arch/aarch64/inc/: arch.h  arch_back.h  asm_macros.S
devices/a55/arch/aarch64/src/: aarch64.ld  aarch64.ld.S  aarch64_qemu.ld  entrypoint.S  exceptions.S
devices/a55/newlib/: newlib_port.c
devices/a55/src/: aarch64.ld  entrypoint.S
devices/a55/xlat_tables_v2/: CMakeLists.txt  xlat_tables_context.E  xlat_tables_context.c  xlat_tables_core.c  xlat_tables_utils.c
devices/a55/xlat_tables_v2/aarch64/: xlat_tables_arch.c
devices/a55/xlat_tables_v2/include/: xlat_tables.h
devices/cv32e40p/: CMakeLists.txt
devices/dubhe_a55/: CMakeLists.txt
devices/dubhe_a55/src/: aarch64.ld  entrypoint.S  mmu_test.S
devices/dubhe_riscv/: CMakeLists.txt
devices/dubhe_riscv/src/: crt0.S  spi_start.S  syscalls.c
devices/dubhe_riscv/src/ld/: idram.ld  sections.ld
devices/m3/: CMakeLists.txt
devices/ri5cy/: CMakeLists.txt
docs/: how_to_create_new_module.md
hw/ddr/: CMakeLists.txt
hw/gic/v2/: CMakeLists.txt
hw/gic/v2/inc/: gic.h  gic_port.h  irq_ctrl.h
hw/gic/v2/src/: irq_ctrl_gic.c
hw/i2c/: CMakeLists.txt
hw/i2c_wo/: CMakeLists.txt
hw/mailbox/: CMakeLists.txt
hw/mbox/: CMakeLists.txt
hw/pinmux/: CMakeLists.txt
hw/pinmux/inc/: pinmux.h
hw/pinmux/src/: pinmux.c
hw/pm/: CMakeLists.txt
hw/pm/inc/: FreeRTOSConfig.h  _pm_define.h  compiler.h  defs.h  errno.h  interrupt.h  list.h  pm.h  pm_i.h  port.h  types.h
hw/pm/inc/sys/: list.h
hw/pm/src/: cpu.s  pm.c  pm_rom.c  port.c  wakelock.c
hw/pmon0/: CMakeLists.txt
hw/pmu/: CMakeLists.txt
hw/pmu/inc/: pmu.h  pmu_regs.h  ppu_regs.h
hw/pmu/src/: pmu.c
hw/spi/dw_apb_ssi/: CMakeLists.txt
hw/spi/dw_apb_ssi/inc/: dma.h
hw/spi/dw_apb_ssi/src/: dma.h  dw_apb_ssi.c  dw_apb_ssi_regs.h
hw/sysctrl/: CMakeLists.txt
hw/system_counter/: CMakeLists.txt
hw/system_counter/inc/: system_counter.h
hw/system_counter/src/: system_counter.c
hw/timer/dw_apb_timers/: CMakeLists.txt
hw/timer/dw_apb_timers/inc/: dw_apb_timers.h  dw_apb_timers_regs.h
hw/timer/dw_apb_timers/src/: dw_apb_timers.c  dw_apb_timers_regs.h
hw/uart/dw_apb_uart/: CMakeLists.txt
hw/uart/dw_apb_uart/inc/: dw_apb_uart.h  dw_apb_uart_regs.h
hw/uart/dw_apb_uart/src/: dw_apb_uart.c
hw/uart/pl001/: CMakeLists.txt
hw/uart/pl001/src/: pl001.c  pl011.c
hw/uart/uart_16550/: CMakeLists.txt
hw/uart/uart_16550/inc/: uart_16550.h
hw/uart/uart_16550/src/aarch64/: uart_16550.S
hw/wdt/dw_apb_wdt/: CMakeLists.txt
hw/wdt/dw_apb_wdt/inc/: dw_apb_wdt.h
hw/wdt/dw_apb_wdt/src/: dw_apb_wdt.c  dw_apb_wdt_regs.h
include/: gic.h  irq_ctrl.h  pl001.h  wakeup_core.h
libs/aarch64_libc/: CMakeLists.txt  abort.c  printf.c  putchar.c  snprintf.c  strcpy.c
libs/aarch64_libc/inc/: assert.h  stdint.h  stdio.h  string.h
libs/crc/: CMakeLists.txt
libs/crc/inc/: crc.h
libs/image_states/: CMakeLists.txt
libs/newlib/: CMakeLists.txt  console_config.h  newlib_port.c
libs/seehi_printf/: CMakeLists.txt  seehi_print.h  snprintf.c
libs/semihosting/: CMakeLists.txt
libs/systimer/: CMakeLists.txt
libs/systimer/inc/: systimer_port.h
libs/systimer/src/: systimer.c
libs/tinyCLI/: CMakeLists.txt
libs/wakeup_core/: CMakeLists.txt
libs/wakeup_core/inc/: wakeup_core.h
libs/wakeup_core/src/: wakeup_core.c
libs/xlat_tables_v2/: CMakeLists.txt  xlat_tables_private.h
libs/xlat_tables_v2/aarch32/: xlat_tables_arch.c
libs/xlat_tables_v2/include/: platform_def.h  xlat_tables_defs.h  xlat_tables_v2.h  xlat_tables_v2_helpers.h
libs/xyzModem/: CMakeLists.txt
libs/xyzModem/inc/: xyzModem.h
libs/xyzModem/src/: xyzModem.c
sources/common/: irq_ctrl_gic.c  wakeup_core.c
tools/cmake_toolchains/: aarch64gcc.cmake  armgcc.cmake  out_of_source.cmake  riscv32_gcc.cmake  riscv_gcc.cmake
tools/make_helpers/: build_macros.mk
utilities/snprintf/: CMakeLists.txt  seehi_print.c  seehi_print.h  snprintf.c  snprintf.h
(+276 files in other folders)
